clean code for more normalization