@@ -1,14 +1,12 @@
 package fu.sep.apjf.service;
 
-import fu.sep.apjf.dto.CourseReviewDto;
-import fu.sep.apjf.dto.CourseWithRatingDto;
+import fu.sep.apjf.dto.response.CourseResponseDto;
 import fu.sep.apjf.entity.Course;
-import fu.sep.apjf.entity.CourseReview;
+import fu.sep.apjf.entity.Review;
 import fu.sep.apjf.entity.User;
-import fu.sep.apjf.mapper.CourseReviewMapper;
-import fu.sep.apjf.mapper.CourseWithRatingMapper;
+import fu.sep.apjf.mapper.CourseMapper;
 import fu.sep.apjf.repository.CourseRepository;
-import fu.sep.apjf.repository.CourseReviewRepository;
+import fu.sep.apjf.repository.ReviewRepository;
 import fu.sep.apjf.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.constraints.Max;
@@ -22,30 +20,29 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 @Transactional
-public class CourseReviewService {
+public class ReviewService {
 
-    private final CourseReviewRepository courseReviewRepo;
+    private final ReviewRepository reviewRepo;
     private final CourseRepository courseRepo;
     private final UserRepository userRepo;
 
-    public CourseReviewDto addReview(Long userId, String courseId, @Min(1) @Max(5) int rating, String comment) {
+    public CourseResponseDto addReview(Long userId, String courseId, @Min(1) @Max(5) int rating, String comment) {
         User user = userRepo.findById(userId)
                 .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy người dùng"));
 
         Course course = courseRepo.findById(courseId)
                 .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy khóa học"));
 
-        if (courseReviewRepo.findByUserAndCourse(user, course).isPresent()) {
+        if (reviewRepo.findByUserAndCourse(user, course).isPresent()) {
             throw new IllegalArgumentException("Người dùng đã đánh giá khóa học này");
         }
 
-        CourseReview review = CourseReview.builder()
+        Review review = Review.builder()
                 .course(course)
                 .user(user)
                 .rating(rating)
@@ -54,50 +51,51 @@ public class CourseReviewService {
                 .lastUpdatedAt(LocalDateTime.now())
                 .build();
 
-        review = courseReviewRepo.save(review);
-        return CourseReviewMapper.toDto(review);
+        reviewRepo.save(review);
+        // Return the updated course as CourseResponseDto
+        Course updatedCourse = courseRepo.findById(courseId).orElseThrow();
+        return CourseMapper.toResponseDto(updatedCourse, getAverageRating(courseId));
     }
 
-    public List<CourseReviewDto> getReviewsByCourse(String courseId) {
+    public List<CourseResponseDto> getReviewsByCourse(String courseId) {
         Course course = courseRepo.findById(courseId)
                 .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy khóa học"));
 
-        return courseReviewRepo.findByCourse(course)
+        return reviewRepo.findByCourse(course)
                 .stream()
-                .map(CourseReviewMapper::toDto)
-                .collect(Collectors.toList());
+                .map(review -> CourseMapper.toResponseDto(review.getCourse(), getAverageRating(courseId)))
+                .toList();
     }
 
-    public List<CourseReviewDto> getReviewsByUser(Long userId) {
+    public List<CourseResponseDto> getReviewsByUser(Long userId) {
         User user = userRepo.findById(userId)
                 .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy người dùng"));
 
-        return courseReviewRepo.findByUser(user)
+        return reviewRepo.findByUser(user)
                 .stream()
-                .map(CourseReviewMapper::toDto)
-                .collect(Collectors.toList());
+                .map(review -> CourseMapper.toResponseDto(review.getCourse(), getAverageRating(review.getCourse().getId())))
+                .toList();
     }
 
     public void deleteReview(Long reviewId, Long userId) {
-        CourseReview review = courseReviewRepo.findById(reviewId)
+        Review review = reviewRepo.findById(reviewId)
                 .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy đánh giá"));
 
         if (!review.getUser().getId().equals(userId)) {
             throw new SecurityException("Không thể xóa đánh giá của người khác");
         }
 
-        courseReviewRepo.delete(review);
+        reviewRepo.delete(review);
     }
 
-    // ✅ ĐÃ SỬA: Trả về danh sách CourseWithRatingDto
-    public List<CourseWithRatingDto> getTopRatedCourses(int topN) {
-        List<Object[]> result = courseReviewRepo.findTopRatedCourses(PageRequest.of(0, topN));
-        List<CourseWithRatingDto> topCourses = new ArrayList<>();
+    public List<CourseResponseDto> getTopRatedCourses(int topN) {
+        List<Object[]> result = reviewRepo.findTopRatedCourses(PageRequest.of(0, topN));
+        List<CourseResponseDto> topCourses = new ArrayList<>();
 
         for (Object[] obj : result) {
             Course course = (Course) obj[0];
             Double avgRating = (Double) obj[1];
-            topCourses.add(CourseWithRatingMapper.toDto(course, avgRating));
+            topCourses.add(CourseMapper.toResponseDto(course, avgRating));
         }
 
         return topCourses;
@@ -107,6 +105,6 @@ public class CourseReviewService {
         Course course = courseRepo.findById(courseId)
                 .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy khóa học"));
 
-        return courseReviewRepo.calculateAverageRatingByCourse(course).orElse(0.0);
+        return reviewRepo.calculateAverageRatingByCourse(course).orElse(0.0);
     }
 }
